tests/negative/parser/runtime_default.orng
// runtime_default.orng:7:46: error: default values must be compile-time known
//     const My_Type: Type = (x: Int = get_four())
//                                             ^
// runtime_default.orng:7:46: note: consider wrapping with `comptime`
// 
fn main() -> Int {
    const My_Type: Type = (x: Int = get_four())
    let y: My_Type
    _ = y
    34
}

fn get_four() -> Int { 4 }